--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.js"></script>
     <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
-    <script src="game.js"></script>
+    <script src="src/game.js"></script>
 </body>
 </html>
